Fix horizontal scroll in Firefox

--- a/_sass/design/_post.scss
+++ b/_sass/design/_post.scss
@@ -16,6 +16,7 @@
 
   &.full {
     float: left;
+    width: 100%;
   }
 
   &.teaser {
